# protos

./: .gitignore  .npmignore  Cargo.toml  index.js  package.json  readme.md  rustfmt.toml
examples/: make_trait.rs
src/: categories.rs  lib.rs  permissions.rs  traits.rs
traits/: Program.edn  spec.md
