[package]
name = "protos"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/fragcolor-xyz/protos.git"
description = "Protos common library including cateogires and traits"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"], optional = true }
scale-info = { version = "2.0", features = ["derive"], default-features = false }
parity-scale-codec = { version = "3.0", features = ["derive"], default-features = false }

[features]
default = ["std"]
std = ["serde", "parity-scale-codec/std", "scale-info/std"]
