[package]
name = "protos"
version = "0.1.27"
edition = "2021"
repository = "https://github.com/fragcolor-xyz/protos.git"
description = "Protos common library including cateogires and traits"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"], optional = true }
scale-info = { version = "2", features = ["derive"], default-features = false }
parity-scale-codec = { version = "3", features = ["derive", "max-encoded-len"], default-features = false }
serde_json = { version = '1.0.79', default-features = false, features = ['alloc'], optional = true }
bitflags = "1.3.2"

[dev-dependencies]
hex = "0.4.3"
sp-core = "14.0.0"

[features]
default = ["std"]
std = ["serde", "parity-scale-codec/std", "scale-info/std", "serde_json"]
